@startuml

title __CACHE's Class Diagram__\n

  namespace tech.eportfolio.server {
    namespace service {
      namespace cache {
        class tech.eportfolio.server.service.cache.PortfolioServiceCacheImpl {
            + PortfolioServiceCacheImpl()
            + create()
            + deleteContent()
            + findByIdIn()
            + findByUserIdIn()
            + findByUsername()
            + fromPortfolioDTO()
            + pushPortfolioToActivity()
            + pushPortfolioToActivity()
            + pushUpdateToActivity()
            + pushUpdateToActivity()
            + save()
            + saveAll()
            + searchByKeywordWithPaginationAndVisibilities()
            + searchByTagWithPaginationAndVisibilities()
            + searchWithPagination()
            + searchWithVisibilities()
            + searchWithVisibilities()
            + toPortfolioActivity()
            + toUpdateActivity()
            + updateContent()
            + updatePortfolio()
        }
      }
    }
  }
  

  namespace tech.eportfolio.server {
    namespace service {
      namespace cache {
        class tech.eportfolio.server.service.cache.UserServiceCacheImpl {
            - logger : Logger
            + UserServiceCacheImpl()
            + changePassword()
            + createGithubAvatar()
            + delete()
            + findAllActive()
            + findByEmail()
            + findByIdIn()
            + findByUsername()
            + findByUsernameIn()
            + findDeletedUserWithContainer()
            + fromUserDTO()
            + loadUserByUsername()
            + register()
            + save()
            + saveAll()
            + verifyPassword()
        }
      }
    }
  }
  

  tech.eportfolio.server.service.cache.PortfolioServiceCacheImpl .up.|> tech.eportfolio.server.service.PortfolioService
  tech.eportfolio.server.service.cache.PortfolioServiceCacheImpl o-- tech.eportfolio.server.service.PortfolioService : portfolioService
  tech.eportfolio.server.service.cache.UserServiceCacheImpl .up.|> org.springframework.security.core.userdetails.UserDetailsService
  tech.eportfolio.server.service.cache.UserServiceCacheImpl .up.|> tech.eportfolio.server.service.UserService
  tech.eportfolio.server.service.cache.UserServiceCacheImpl o-- tech.eportfolio.server.service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
